kubernetes/test/nginx/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: test
  labels:
    app: nginx
spec:
  replicas: 3
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: test
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
  - name: http
    targetPort: 80
    port: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: test
spec:
  rules:
  - host: "nginx.local.elepnt.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
  tls:
  - hosts:
    - nginx.local.elepnt.com
    secretName: local-elepnt-com-staging-tls
