kubernetes/test/nginx/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: test
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`www.nginx.local.elepnt.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`nginx.local.elepnt.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
  #     middlewares:
  #       - name: default-headers
  tls:
    secretName: nginx-tls-secret
    # secretName: local-elepnt-com-tls
