kubernetes/test/nginx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: test
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
  - name: http
    targetPort: 80
    port: 80
    protocol: TCP
